Create Front : CreateArea

--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -7,8 +7,9 @@
 
   <ul>
     <li><a routerLink="/createUser">Create User</a></li>
-  </ul>
   <li><a routerLink="/view-profil">View-Profil</a> </li>
+  <li><a routerLink="/createArea">Create Area</a></li>
+  </ul>
 </div>
 
 
