--- a/front/truespotFront/src/app/components/topo/create-topo/create-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/create-topo/create-topo.component.html
@@ -1,3 +1,42 @@
-<p>
-  create-topo works!
-</p>
+<div class="container">
+<div class="row">
+  <div class="col-lg-12">
+    <div class="well-block">
+      <div class="well-title">
+        <p></p>
+        <h2>Créer un Topo</h2>
+      </div>
+
+      <form #f="ngForm" [formGroup]="forms" (ngSubmit)="saveTopo()">
+
+        <div class="row">
+          <div class="col-md-2">
+            <div class="form-group"
+                 [class.has-success]="forms.get('name').valid"
+                 [class.has-error]="forms.get('name').invalid && forms.get('name').touched">
+              <label class="control-label">Nom:</label>
+              <input class="form-control"
+                     type="text"
+                     name="name"
+                     placeholder="Nom du Topo"
+                     formControlName="name"
+                     required minlength="2">
+            </div>
+          </div>
+
+
+
+          <div class="col-md-12">
+            <div class="form-group">
+              <button
+                type="submit"
+                class="btn btn-primary"[disabled]="forms.invalid">Valider
+              </button>
+            </div>
+          </div>
+        </div>
+      </form>
+  </div>
+</div>
+</div>
+</div>
