--- a/front/truespotFront/src/app/components/user/create-user/create-user.component.html
+++ b/front/truespotFront/src/app/components/user/create-user/create-user.component.html
@@ -149,8 +149,7 @@
               <div class="form-group">
                 <button
                   type="submit"
-                  class="btn btn-primary"> Valider
-<!--                  [disabled]="forms.invalid">Valider-->
+                  class="btn btn-primary" [disabled]="forms.invalid">Valider
                 </button>
               </div>
             </div>
