--- a/front/truespotFront/src/app/components/road/create-road/create-road.component.html
+++ b/front/truespotFront/src/app/components/road/create-road/create-road.component.html
@@ -1,121 +1,115 @@
 <div class="container">
-<div class="row">
-  <div class="col-lg-12">
-    <div class="well-block">
-      <div class="well-title">
-        <p></p>
-        <h2>Créer une voie :</h2>
-      </div>
 
-      <form #f="ngForm" [formGroup]="forms" (ngSubmit)="saveRoad()">
+    <div class="panel panel-primary">
+             <div class="panel-heading"><h3>Créer une voie :</h3></div>
+            <div class="panel-body">
+            <form #f="ngForm" [formGroup]="forms" (ngSubmit)="saveRoad()">
 
-        <div class="row">
-          <div class="col-md-2">
-            <div class="form-group"
-                 [class.has-success]="forms.get('name').valid"
-                 [class.has-error]="forms.get('name').invalid && forms.get('name').touched">
-              <label class="control-label">Nom:</label>
-              <input class="form-control"
-                     type="text"
-                     name="name"
-                     placeholder="Nom de la voie"
-                     formControlName="name"
-                     required minlength="2">
-            </div>
-          </div>
+              <div class="row">
+                <div class="col-md-2">
+                  <div class="form-group"
+                       [class.has-success]="forms.get('name').valid"
+                       [class.has-error]="forms.get('name').invalid && forms.get('name').touched">
+                    <label class="control-label">Nom:</label>
+                    <input class="form-control"
+                           type="text"
+                           name="name"
+                           placeholder="Nom de la voie"
+                           formControlName="name"
+                           required minlength="2">
+                  </div>
+                </div>
 
-          <div class="col-md-2">
-          <label class="control-label">Type de la voie:</label>
-          <div class="form-group"
-               [class.has-success]="forms.get('type').valid"
-               [class.has-error]="forms.get('type').invalid && forms.get('type').touched">
-            <select class="browser-default custom-select"  formControlName="type">
-              <option value="Bloc">Bloc</option>
-              <option value="Voie">Voie</option>
-              <option value="Grande voie">Grande voie</option>
-              <option value="Escalade libre">Escalade libre</option>
-              <option value="Relais">Relais</option>
-            </select>
-        </div>
-        </div>
-        </div>
+                <div class="col-md-2">
+                  <label class="control-label">Type de la voie:</label>
+                  <div class="form-group"
+                       [class.has-success]="forms.get('type').valid"
+                       [class.has-error]="forms.get('type').invalid && forms.get('type').touched">
+                    <select class="browser-default custom-select"  formControlName="type">
+                      <option value="Bloc">Bloc</option>
+                      <option value="Voie">Voie</option>
+                      <option value="Grande voie">Grande voie</option>
+                      <option value="Escalade libre">Escalade libre</option>
+                      <option value="Relais">Relais</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <br>
+              <h5>Cotation de la voie:</h5>
+              <div class="row">
+                <div class="col-md-2">
+                  <label class="control-label">Chiffre:</label>
+                  <div class="form-group"
+                       [class.has-success]="forms.get('number').valid"
+                       [class.has-error]="forms.get('number').invalid && forms.get('number').touched">
+                    <select class="browser-default custom-select"  formControlName="number">
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                    </select>
+                  </div>
+                </div>
 
-        <h4>Cotation de la voie:</h4>
-      <div class="row">
-        <div class="col-md-2">
-          <label class="control-label">Chiffre:</label>
-          <div class="form-group"
-               [class.has-success]="forms.get('number').valid"
-               [class.has-error]="forms.get('number').invalid && forms.get('number').touched">
-            <select class="browser-default custom-select"  formControlName="number">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-            </select>
-          </div>
-        </div>
+                <div class="col-md-2">
+                  <div class="form-group"
+                       [class.has-success]="forms.get('letter').valid"
+                       [class.has-error]="forms.get('letter').invalid && forms.get('letter').touched">
+                    <label class="control-label">Lettre:</label>
+                    <select class="browser-default custom-select" formControlName="letter">
+                      <option value="null"></option>
+                      <option value="A">A</option>
+                      <option value="B">B</option>
+                      <option value="C">C</option>
+                    </select>
+                  </div>
+                </div>
 
-        <div class="col-md-2">
-          <div class="form-group"
-               [class.has-success]="forms.get('letter').valid"
-               [class.has-error]="forms.get('letter').invalid && forms.get('letter').touched">
-            <label class="control-label">Lettre:</label>
-            <select class="browser-default custom-select" formControlName="letter">
-              <option value="null"></option>
-              <option value="A">A</option>
-              <option value="B">B</option>
-              <option value="C">C</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="col-md-2">
-          <div class="form-group"
-               [class.has-success]="forms.get('symbol').valid"
-               [class.has-error]="forms.get('symbol').invalid && forms.get('symbol').touched">
-            <label class="control-label">Symbole:</label>
-            <select class="browser-default custom-select" formControlName="symbol">
-              <option value="null"></option>
-              <option value="+">+</option>
-              <option value="-">-</option>
-            </select>
-          </div>
-        </div>
-      </div>
-
-
-        <h4>Description</h4>
-        <div class="form-group"
-             [class.has-success]="forms.get('description').valid"
-             [class.has-error]="forms.get('description').invalid && forms.get('description').touched">
+                <div class="col-md-2">
+                  <div class="form-group"
+                       [class.has-success]="forms.get('symbol').valid"
+                       [class.has-error]="forms.get('symbol').invalid && forms.get('symbol').touched">
+                    <label class="control-label">Symbole:</label>
+                    <select class="browser-default custom-select" formControlName="symbol">
+                      <option value="null"></option>
+                      <option value="+">+</option>
+                      <option value="-">-</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <br>
+              <h5>Description :</h5>
+              <br>
+              <div class="form-group"
+                   [class.has-success]="forms.get('description').valid"
+                   [class.has-error]="forms.get('description').invalid && forms.get('description').touched">
           <textarea class="form-control input-md"
                     type="text"
                     rows="5"
                     name="description"
-                    placeholder="Description de la voie"
+                    placeholder="Une rapide description de la voie..."
                     formControlName="description"
                     required
                     minlength="2"
           ></textarea>
-        </div>
+              </div>
 
-        <div class="col-md-12">
-          <div class="form-group">
-            <button
-              type="submit"
-              class="btn btn-primary"[disabled]="forms.invalid">Valider
-            </button>
+              <div class="col-md-12">
+                <div class="form-group">
+                  <button
+                    type="submit"
+                    class="btn btn-primary"[disabled]="forms.invalid">Valider
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-
-      </form>
-    </div>
-  </div>
-</div>
-</div>
+      </div>
