--- a/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
@@ -1,3 +1,11 @@
+<div class="container">
+  <div class=""
+</div>
+
+
 <p>
-  view-topo works!
+  -----------> Topo
+  -----------> Spot
+  -----------> Area
+  -----------> road
 </p>
