--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -5,15 +5,14 @@
         <a class="navbar-brand">TrueSpot</a>
         <ul class="nav navbar-dark" routerLinkActive="active" a>
           <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/createTopo">Créer un topo</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/createTopo" >Créer un topo</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/createSpot">Créer un spot</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/createArea">Créer un secteur</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/sign-in">S'identifier</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/logout">Se déconnecter</a></li>
         </ul>
       </div>
     </nav>
-
-
-
 
 <router-outlet></router-outlet>
