--- a/front/truespotFront/src/app/components/auth/sign-in/sign-in.component.html
+++ b/front/truespotFront/src/app/components/auth/sign-in/sign-in.component.html
@@ -1,3 +1,47 @@
-<p>
-  sign-in works!
-</p>
+<div class="col-md-6 offset-md-3 mt-5">
+
+  <h4>Authentification</h4>
+
+  <form #f="ngForm" [formGroup]="forms" (ngSubmit)="onSubmit()">
+
+    <div class="card">
+
+      <div class="form-group"
+           [class.has-success]="forms.get('pseudo').valid"
+           [class.has-error]="forms.get('pseudo').invalid && forms.get('pseudo').touched">
+        <label class="control-label">Nom:</label>
+        <input class="form-control"
+               type="text"
+               name="pseudo"
+               placeholder="Pseudo"
+               formControlName="pseudo"
+               required minlength="2">
+      </div>
+
+      <div class="form-group"
+           [class.has-success]="forms.get('password').valid"
+           [class.has-error]="forms.get('password').invalid && forms.get('password').touched">
+        <label class="control-label">Password:</label>
+        <input class="form-control input-md"
+               type="text"
+               name="password"
+               placeholder="Password"
+               formControlName="password"
+               required
+               minlength="2">
+      </div>
+    </div>
+  </form>
+
+  <div class="col-md-12">
+    <div class="form-group">
+      <button
+        type="submit"
+        class="btn btn-primary"[disabled]="forms.invalid">Valider
+      </button>
+    </div>
+  </div>
+</div>
+
+
+
