--- a/front/truespotFront/src/app/components/user/create-user/create-user.component.html
+++ b/front/truespotFront/src/app/components/user/create-user/create-user.component.html
@@ -130,6 +130,7 @@
                        name="password"
                        placeholder="Mot de passe"
                        formControlName="password"
+                       minlength="6"
                        required>
               </div>
             </div>
