--- a/front/truespotFront/src/app/components/auth/sign-in/sign-in.component.html
+++ b/front/truespotFront/src/app/components/auth/sign-in/sign-in.component.html
@@ -3,7 +3,8 @@
 </div>
 
 <ng-template #loggedOut>
-  <div class="row col-sm-6" style="max-width:350px;">
+  <div class="container">
+  <div class="row col-md6">
     <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
       <div class="form-group">
         <label for="pseudo">Pseudo</label>
@@ -29,8 +30,10 @@
         </div>
       </div>
     </form>
-    <hr />
+    <div class="form-group">
     <p>Don't have an account?</p>
-    <a href="signup" class="btn btn-success">Sign Up</a>
+    <a href="createUser" class="btn btn-success">Register</a>
+    </div>
+  </div>
   </div>
 </ng-template>
