--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -11,6 +11,7 @@
           <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/sign-in">S'identifier</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/logout">Se déconnecter</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/home">Token</a></li>
         </ul>
       </div>
     </nav>
