--- a/front/truespotFront/src/app/components/topo/create-topo/create-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/create-topo/create-topo.component.html
@@ -24,6 +24,14 @@
             </div>
           </div>
 
+          <label> Choisissez un département :</label>
+          <label>
+            <select name="department" class="form-control select"  formControlName="department">
+              <option *ngFor="let department of departments" [ngValue]="department.id" >
+                {{ department.name }}
+              </option>
+            </select>
+          </label>
 
 
           <div class="col-md-12">
