--- a/front/truespotFront/src/app/components/user/create-user/create-user.component.html
+++ b/front/truespotFront/src/app/components/user/create-user/create-user.component.html
@@ -95,10 +95,10 @@
                    [class.has-error]="forms.get('gender').invalid && forms.get('gender').touched">
                 <div class="form-group">
                   <label class="d-block">
-                    <input type="radio" class="mr-1" name="gender" value="masculin" formControlName="gender"> Homme
+                    <input type="radio" class="mr-1" name="gender" value="Homme" formControlName="gender"> Homme
                   </label>
                   <label class="d-block">
-                    <input type="radio" class="mr-1" name="gender" value="feminin" formControlName="gender"> Femme
+                    <input type="radio" class="mr-1" name="gender" value="Femme" formControlName="gender"> Femme
                   </label>
                 </div>
             </div>
