--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -5,7 +5,7 @@
         <a class="navbar-brand">TrueSpot</a>
         <ul class="nav navbar-dark" routerLinkActive="active" a>
           <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/createTopo" >Créer un topo</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/topo/ajout-topo" >Créer un topo</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/createSpot">Créer un spot</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/createArea">Créer un secteur</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
