--- a/front/truespotFront/src/app/components/user/create-user/create-user.component.html
+++ b/front/truespotFront/src/app/components/user/create-user/create-user.component.html
@@ -63,8 +63,8 @@
                 <label class="control-label">Age:</label>
                 <input class="form-control input-md"
                        type="number"
-                       name="age"
-                       placeholder="Adresse"
+                       name="Age"
+                       placeholder="age"
                        formControlName="age"
                        autocapitalize="on"
                        spellcheck="on"
